syntax = "proto3";

package kube.v1;

option go_package = "github.com/castai/kvisor/api/kube/v1";

service KubeAPI {
  rpc GetClusterInfo(GetClusterInfoRequest) returns (GetClusterInfoResponse);
  // GetIPInfo is deprecated, use GetIPsInfo.
  rpc GetIPInfo(GetIPInfoRequest) returns (GetIPInfoResponse);
  rpc GetIPsInfo(GetIPsInfoRequest) returns (GetIPsInfoResponse);
  rpc GetPod(GetPodRequest) returns (GetPodResponse);
  rpc GetNode(GetNodeRequest) returns (GetNodeResponse);
}

message GetClusterInfoRequest {}
message GetClusterInfoResponse {
  repeated string pods_cidr = 1;
  repeated string service_cidr = 2;
}

message GetIPInfoRequest {
  bytes ip = 1;
}

message GetIPInfoResponse {
  IPInfo info = 1;
}

message GetIPsInfoRequest {
  repeated bytes ips = 1;
}

message GetIPsInfoResponse {
  repeated IPInfo list = 1;
}

message IPInfo {
  string pod_uid = 1;
  string pod_name = 3;
  string namespace = 2;
  string workload_name = 4;
  string workload_kind = 5;
  string workload_uid = 6;
  string zone = 7;
  string node_name = 8;
  bytes ip = 9;
}

message GetPodRequest {
  string uid = 2;
}

message GetPodResponse {
  Pod pod = 1;
}

enum WorkloadKind {
  WORKLOAD_KIND_UNKNOWN = 0;
  WORKLOAD_KIND_DEPLOYMENT = 1;
  WORKLOAD_KIND_REPLICA_SET = 2;
  WORKLOAD_KIND_STATEFUL_SET = 3;
  WORKLOAD_KIND_DAEMON_SET = 4;
  WORKLOAD_KIND_JOB = 5;
  WORKLOAD_KIND_CRONJOB = 6;
  WORKLOAD_KIND_POD = 7;
}

message Pod {
  string workload_uid = 1;
  string workload_name = 2;
  WorkloadKind workload_kind = 3;
  string zone = 4;
  string node_name = 5;
}

message GetNodeRequest {
  string name = 1;
}

message GetNodeResponse {
  Node node = 1;
}

message Node {
  string name = 1;
  map<string, string> labels = 2;
}
